# MyJniStudyProject

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myjnistudyproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myjnistudyproject/: MainActivity.java
app/src/main/java/com/example/myjnistudyproject/firstjni/: MyFirstJni.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/myjnistudyproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mynativelib/: .gitignore  build.gradle
mynativelib/src/androidTest/java/com/example/mynativelib/: ExampleInstrumentedTest.java
mynativelib/src/main/: AndroidManifest.xml
mynativelib/src/main/cpp/: CMakeLists.txt  JniBridgeNative.cpp  JniBridgeNative.h  StudentNative.cpp  StudentNative.h  mynativelib.cpp
mynativelib/src/main/cpp/cstudy/: CMakeLists.txt  FuncStudy.cpp  FuncStudy.h  ThreadStudy.cpp  ThreadStudy.h
mynativelib/src/main/cpp/jnihelper/: ScopedGlobalRef.h  ScopedJniEnv.h
mynativelib/src/main/cpp/utils/: CMakeLists.txt  LogUtil.h  StringUtil.cpp  StringUtil.h
mynativelib/src/main/java/com/example/mynativelib/: ClickInfo.java  JniBridge.java  JniCallback.java  NativeLib.java  OnClickListener.java  Student.java
mynativelib/src/test/java/com/example/mynativelib/: ExampleUnitTest.java
